fixes link alignment in image and pet display

--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -50,6 +50,15 @@
     justify-content: center;
 }
 
+.content-link{
+    color: #25c7d9
+}
+
+.content-link:hover{
+    color: #f23030;
+    text-decoration: none;
+}
+
 .profile-preview-img{
     width: 115px;
     height: 115px;
@@ -101,13 +110,12 @@
     align-items: start;
     margin: 50px 0 0 20px;
 }
-.pet-card-btns-container{
+/* .pet-card-btns-container{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-right: 41px;
-  
-}
+} */
 
 .friends-container{
     border: 2px solid black;
